# Lemaj

./: Cargo.toml  LICENSE  README.md  Rocket.toml  TODO.md
src/: main.rs
src/database/: accounts.rs  db.rs  mod.rs
src/models/: account.rs
src/routes/: accounts.rs  errors.rs  home.rs  mod.rs
static/styles/: main.css
views/: footer.html.hbs  layout.html.hbs  nav.html.hbs
views/errors/: 404.html.hbs  500.html.hbs
views/home/: about.html.hbs  index.html.hbs
