[package]
name = "lemaj"
version = "0.1.0"
authors = ["Yohannes Kifle <yohannes2kifle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.126"
deadpool-postgres = { version = "0.9.0" }
tokio-postgres = "0.7.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
config = "0.11.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]
